// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertImportPaths() should return markup without modification 1`] = `
"
'import * from '@porsche-design-system/components-js';
'import * from '@porsche-design-system/components-angular';
'import * from '@porsche-design-system/components-react';"
`;

exports[`convertImportPaths() should return markup without updated import path for angular 1`] = `
"
'import * from '@porsche-design-system/components-js';
'import * from './../../@porsche-design-system/components-angular';
'import * from '@porsche-design-system/components-react';"
`;

exports[`convertImportPaths() should return markup without updated import path for js 1`] = `
"
'import * from './@porsche-design-system/components-js';
'import * from '@porsche-design-system/components-angular';
'import * from '@porsche-design-system/components-react';"
`;

exports[`convertImportPaths() should return markup without updated import path for react 1`] = `
"
'import * from '@porsche-design-system/components-js';
'import * from '@porsche-design-system/components-angular';
'import * from './@porsche-design-system/components-react';"
`;

exports[`validateExternalDependencies() should throw error if invalid externalDependency is passed 1`] = `"Passed 'externalStackBlitzDependencies[]' contains invalid value. Allowed are 'imask'."`;
